--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo --port 3000",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "prod": "pnpm build && pnpm start",
     "lint": "tsc && pnpm biome lint ./src",
-    "fmt": "pnpm biome format --write ./src",
+    "fmt": "biome format --write ./src",
     "test": "VITE_CJS_IGNORE_WARNING=true vitest run",
-    "test:watch": "VITE_CJS_IGNORE_WARNING=true vitest watch",
-    "api": "openapi-typescript ./api/schema.json --output ./src/services/api.d.ts"
+    "test:watch": "VITE_CJS_IGNORE_WARNING=true vitest watch"
   },
   "dependencies": {
     "@mantine/core": "7.3.2",
@@ -21,13 +20,12 @@
     "@tabler/icons-react": "^3.2.0",
     "next": "^14.0.1",
     "openapi-fetch": "^0.9.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swr": "^2.2.5",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.0",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
@@ -38,7 +36,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "dotenv": "^16.0.3",
     "jsdom": "^24.0.0",
-    "openapi-typescript": "^6.7.5",
     "postcss-preset-mantine": "^1.12.3",
     "typescript": "^5.3.2",
     "vite-tsconfig-paths": "^4.3.2",
