--- a/.github/workflows/test-web.yml
+++ b/.github/workflows/test-web.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Lint Test
         run: pnpm lint
 
-      - name: Unit Test
-        run: pnpm test
+      # - name: Unit Test
+      #   run: pnpm test
