--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,10 +23,13 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
+    "@nestjs/websockets": "^10.3.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -35,6 +38,7 @@
     "@swc/core": "^1.5.25",
     "@types/express": "^4.17.13",
     "@types/node": "18.11.18",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@vitest/coverage-v8": "^1.6.0",
     "firebase-admin": "^11.5.0",
