--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,6 +11,14 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@app/messages": [
+        "libs/messages/src"
+      ],
+      "@app/messages/*": [
+        "libs/messages/src/*"
+      ]
+    }
   }
 }
