--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "openapi-fetch": "^0.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.7.5",
     "swr": "^2.2.5",
     "zod": "3.22.4"
   },
